--- a/src/ui/css/snapdragon.css
+++ b/src/ui/css/snapdragon.css
@@ -387,6 +387,7 @@ a.dropdown-item {
 }
 
 .taxon-summary {
+  width: 100%;
   padding: 1rem;
   display: flex;
   align-items: center;
@@ -524,7 +525,7 @@ a.dropdown-item {
 .scrollable {
   overflow-y: scroll;
   position: fixed;
-  /* width: 100%; */
+  width: 100%;
   left: 0;
   right: 0;
 }
@@ -598,6 +599,7 @@ a.dropdown-item {
 /* STRIPS */
 
 .strips {
+  height: 12rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   cursor: pointer;
@@ -1221,14 +1223,15 @@ span.correct {
   display: grid;
   grid-template-columns: 1fr;
   cursor: pointer;
+  margin: .5rem 0;
 }
 
-.bird-song {
+/* .bird-song {
   margin: 1rem .5rem 0 .5rem;
   font-size: .9rem;
   display: flex;
   justify-content: center;
-}
+} */
 
 
 .trait.card li span:nth-child(1) {
